package xyz.xiaolinz.demo.proxy.dynamicproxy.jdk;

/**
 * @author huangmuhong
 * @version 1.0.0
 * @date 2023/8/4
 */
public interface DataQuery {

  String query(String queryKey);


  String queryAll();
}
